--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,16 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/futbol
-spring.datasource.username=root
-spring.datasource.password=laboratorio
+#spring.datasource.url=jdbc:mysql://localhost:3306/futbol
+#spring.datasource.username=root
+#spring.datasource.password=laboratorio
+
+
+### POSTGRE ###
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=mypassword
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=debug
+spring.jpa.show-sql=true
