--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>futbol</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>8</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -44,6 +44,10 @@
             <optional>true</optional>
         </dependency>
 
+		<dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
