--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@
 
 
 ### POSTGRE ###
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=mypassword
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgre_bd
+spring.datasource.username=jperecab
+spring.datasource.password=laboratorio
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
 
