--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 
 
 ### POSTGRE ###
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/jperecab
 spring.datasource.username=jperecab
 spring.datasource.password=laboratorio
 spring.datasource.driver-class-name=org.postgresql.Driver
